--- a/mksolucion/Views/Home/ContactFinish.cshtml
+++ b/mksolucion/Views/Home/ContactFinish.cshtml
@@ -1,8 +1,35 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "ContactFinish";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ContactFinish</h2>
+<section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-c" style="background-image: url(../Content/assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-xs-center">
+                <h3 class="mbr-section-title display-2">ARTICLE HEADER</h3>
+                <div class="lead"><p>esto es un banner</p></div>
+
+            </div>
+        </div>
+    </div>
+</section>
+<section class="mbr-section article" id="msg-box3-1" style="background-color: rgb(242, 242, 242); padding-top: 30px; padding-bottom: 30px; min-height:400px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-xs-center">
+                <div style="text-align:center">
+                    <h1>Contacto Finalizado</h1>
+                    <p></p>
+                    <p>
+                        Gracias por ponerte en contacto con nuestro equipo de apoyo. <br />Un ticket de soporte ahora se ha abierto para tu solicitud. <br />Se te notificará cuando tengamos una respuesta vía correo electrónico 
+                    </p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
