--- a/mksolucion/Areas/portal/Views/Soporte/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/Soporte/Index.cshtml
@@ -5,23 +5,59 @@
 
 <div class="container">
     <div class="row" style="margin:auto">
-        <div>Abrir ticket / elige el departamento</div>
+        <div class="col-md-12" style="padding:40px 0;">
+            <h1>ABRIR TICKET / Elige el departamento</h1>
+        </div>
         <div style="margin:auto; padding-top:20px">
             <div class="col-md-2 col-sm-offset-1">
-                @Html.ActionLink("Editar", "Edit", "EstadosActivacion", new { area = "portal" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
+                @Html.ActionLink("Soporte", "nuevo_soporte", "soporte", new { area = "portal", idtpcnt = "1" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
             </div>
             <div class="col-md-2">
-                @Html.ActionLink("Editar", "Edit", "EstadosActivacion", new { area = "portal" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_pago.png') no-repeat center right;" })
+                @Html.ActionLink("Ventas", "nuevo_soporte", "soporte", new { area = "portal", tpcnt = "2" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_pago.png') no-repeat center right;" })
             </div>
             <div class="col-md-2">
-                @Html.ActionLink("Editar", "Edit", "EstadosActivacion", new { area = "portal" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_venta.png') no-repeat center right;" })
+                @Html.ActionLink("Pago", "nuevo_soporte", "soporte", new { area = "portal", tpcnt = "3" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_venta.png') no-repeat center right;" })
             </div>
             <div class="col-md-2">
-                @Html.ActionLink("Editar", "Edit", "EstadosActivacion", new { area = "portal" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
+                @Html.ActionLink("Servicio al Cliente", "nuevo_soporte", "soporte", new { area = "portal", tpcnt = "4" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
             </div>
             <div class="col-md-2">
-                @Html.ActionLink("Editar", "Edit", "EstadosActivacion", new { area = "portal" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
+                @Html.ActionLink("Facturación", "nuevo_soporte", "soporte", new { area = "portal", tpcnt = "5" }, new { @class = "boton_soporte", @style = "background:url('../../Content/assets/Images/ticket_soporte.png') no-repeat center right;" })
             </div>
         </div>
     </div>
-</div>
+    <div class="row" style="margin:auto">
+        <div class="col-md-12" style="padding:20px 0;">
+            <h1>Mis Tickets de Soporte</h1>
+        </div>
+        <div class="col-md-12" style="padding:0px 0;">
+
+            @(Html.Kendo().Grid<mksolucion.Models._con01_contacto>()
+              .Name("grid")
+              .Columns(columns =>
+              {
+                  columns.Template(c => Html.ActionLink("Ver ticket", "viewticket", new { Id = c.con01_id })).ClientTemplate(Html.ActionLink("Ver Ticket", "viewticket", new { Id = "con01_id" }, new { target = "_blank", @style = "background:url('../../Content/assets/Images/btn/btn_edit.png') no-repeat center left; display:inline-block; height: 24px; width:130px; padding-left:25px" }).ToHtmlString().Replace("con01_id", "#=con01_id#")).Width(150);
+                  columns.Bound(c => c.con01_fechacreacion).Width(150);
+                  columns.Bound(c => c._TipoContacto.con02_nombre); 
+                  columns.Bound(c => c.con01_asunto);
+                  columns.Bound(c => c._EstadoMensaje.con05_nombre);
+                  columns.Bound(c => c.con01_ultimaactualizacion);
+                  
+              })
+              .ColumnMenu()
+              .Pageable()
+              .Navigatable()
+              .Sortable(sortable =>
+              {
+                  sortable.SortMode(GridSortMode.MultipleColumn);
+              })
+              .Filterable()
+              .Scrollable(scrollable => scrollable.Enabled(false))
+              .DataSource(dataSource => dataSource
+                  .Ajax()
+                          .Read(read => read.Action("con01_contacto_Read", "Soporte"))
+              )
+            )
+
+        </div>
+   </div>
