--- a/mksolucion/Areas/completarinformacion/Views/Shared/_Layout.cshtml
+++ b/mksolucion/Areas/completarinformacion/Views/Shared/_Layout.cshtml
@@ -24,6 +24,37 @@
     </head>
     <body>
         @RenderBody()
+        <div style="height:30px;"></div>
+        <footer>
+            <div class="container" sstyle="padding-top:5px;">
+                <div  class="row" style="margin:auto;">
+                    <div class="col-md-12" style="margin:auto !important">
+                        <table border='0' cellspacing='0' cellpadding='0' width='640' style='width:480.0pt;border-collapse:collapse;padding:0px 0px 0px 0px;max-width:640px; margin:auto !important;'>
+                            <tr>
+                                <td width='640' valign='top' style='width:480.0px;padding:0px 0px 0px 0px;max-width:640px' id='footerContent'>
+                                    <div align='center'>
+                                        <table border='0' cellspacing='0' cellpadding='0' width='100%' style='width:100.0%;border-collapse:collapse;padding:0px 0px 0px 0px;max-width:640px'>
+                                            <tr>
+                                                <td valign='top' style='border:none;border-top:solid #F2F2F2 1.5pt;padding:30.0px 0px 15.0px 0px'>
+                                                    <p align='center' style='margin:0px;margin-bottom:.0001pt;text-align:center;line-height:18.0pt;'>
+                                                        <span style='font-size:9.0pt;font-family:Helvetica Neue;color:#484848'>
+                                                            © 2017 MKcreativo, Todos los derechos reservados.<br>
+                                                            Huerfanos 903 • Santiago • Chile<br>
+                                                            Telefono: +(56) 226 641 975 / +(56) 226 648 472 / +(56) 226 641 169
+                                                        </span>
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 
         @RenderSection("scripts", required: false)
     </body>
