--- a/mksolucion/Content/Site.css
+++ b/mksolucion/Content/Site.css
@@ -1002,3 +1002,33 @@ input.k-textbox {
 .boton_soporte a:hover {
     display:inline-block; height: 90px; width: 90px; padding-top:95px; text-align:center;font-size: 14px; line-height: normal;color: #000;text-decoration:none; font-weight:bold;
 }
+
+
+.panel-heading + .panel-body, .panel-body:first-child {
+    border-top: none;
+}
+.panel-separated {
+    padding: 0;
+}
+.panel-body {
+    color: #6d6f71;
+    line-height: 2;
+    border-top: 1px solid #ddd;
+}
+.panel-body .small {
+    font-size: 12px !important;
+}
+.font-blue {
+    color: #3164b0;
+}
+.font-green {
+    color: #8ec741;
+}
+.font16 {
+    font-size: 16px !important;
+}
+.panel-heading {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
