--- a/mksolucion/Views/Shared/_LayoutAdmin.cshtml
+++ b/mksolucion/Views/Shared/_LayoutAdmin.cshtml
@@ -41,10 +41,15 @@
 
 
                     <li>
-                        @Html.ActionLink("Soporte", "Index", "soporte", new { area = "portal" }, new { @class = "dropdown-item" })
+                        @Html.ActionLink("Soporte", "Index", "soporte", new { area = "portal" }, new { @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
+                        <ul>
+                            <li>
+                                @Html.ActionLink("Resolver Ticket", "resolverticket", "soporte", new { area = "portal" }, new { @class = "dropdown-item" })
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                                @Html.ActionLink("Configuración", "Index", "Configuraciones", new { area = "" }, new { @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
+                            @Html.ActionLink("Configuración", "Index", "Configuraciones", new { area = "" }, new { @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
                                 <ul>
                                     <li>
                                         @Html.ActionLink("Campaña", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item dropdown-toggle", data_toggle = "dropdown-submenu" })
@@ -55,6 +60,8 @@
                                             <li>
                                                 @Html.ActionLink("configuracion adicional", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item" })
                                             </li>
+
+                                            
                                         </ul>
                                     </li>
                                     <li>
@@ -121,6 +128,7 @@
                                             <li>@Html.ActionLink("Tipo Soporte", "Index", "TipoSoporte", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                             <li>@Html.ActionLink("Importancia Mail", "Index", "ImportanciaMail", new { area = "portal" }, new { @class = "dropdown-item" })</li>
 
+                                            
                                             <li>@Html.ActionLink("Estado Mensajes", "Index", "EstadoMensaje", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                         </ul>
                                     </li>
