--- a/mksolucion/Areas/portal/Views/Soporte/resolverticket.cshtml
+++ b/mksolucion/Areas/portal/Views/Soporte/resolverticket.cshtml
@@ -4,8 +4,8 @@
 }
 <div class="container">
     <div class="row" style="margin:auto">
-        <div class="col-md-12" style="padding:40px 0;">
-            <h1>VER TICKET / complemto de administardores</h1>
+        <div class="col-md-12" style="padding:20px 0;">
+            <h1>VER TICKET DE USUARIOS</h1>
         </div>
         <div class="col-md-12" style="padding:0px 0;">
 
