--- a/mksolucion/Content/Site.css
+++ b/mksolucion/Content/Site.css
@@ -454,7 +454,7 @@ textarea {
     input[type="submit"],
     input[type="button"],
     button {
-        background-color: #d3dce0;
+        background-color: #286090;
         border: 1px solid #787878;
         cursor: pointer;
         font-size: 1.2em;
